[package]
name = "cluConcatBytes"
version = "0.1.5"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/cluConcatBytes.git"
edition = "2018"

license = "Apache-2.0"
readme = "README.md"

description = "Merges literals into a static array."
keywords = ["concat", "concat_byte_array", "concat_bytes", "clucompany"]
categories = ["development-tools::ffi"]

[features]

[lib]
plugin = true

[dependencies]
